--- a/index.html
+++ b/index.html
@@ -51,7 +51,22 @@
 
       <!-- Textos -->
       <div class="item texto text1"><p>El Eclipse Nayr no es solo un evento; es una promesa que se renueva cada cinco años sobre Eudoria.</p></div>
-      <div class="item texto text2"><p>-34.924812957625655, -57.9419100028901 -34.924812957625655, -57.9419100028901 -34.924812957625655, -57.9419100028901</p></div>
+<div class="item texto text2">
+  <p>
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901
+  </p>
+    <p>
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901 
+    -34.924812957625655, -57.9419100028901
+  </p>
+</div>
       <div class="item texto text3"><p>Los Eudorianos te invitan</p></div>
       <div class="item texto text4"><p>NAYRUMOON</p></div>
       <div class="item texto text5"><p>Las flores Nyrazas, portadoras de bioluminiscencia, flotan en cuencos sobre el lago sagrado, siendo a la vez un adiós a lo que fue y la nueva chispa de la nueva fuerza comunitaria.</p></div>
